# noty

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  INITIAL_PLAN.md  TERRAFORM.md  aria_amt_notes.md
infra/: imports.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
src/transcribe_app/: __init__.py  aria_amt.py  llm_cleanup.py  notation.py  preprocess.py  render.py  transcribe.py
tests/: test_correctness.py  test_pipeline.py  test_time_signature.py
tests/fixtures/: README.md  generate_fixtures.py
tests/fixtures/klavir/: bach_minuet_g_excerpt.musicxml  bach_minuet_g_excerpt.notes.md
tests/fixtures/monofonni/: ovcaci_ctveraci.musicxml  ovcaci_ctveraci.notes.md  pec_nam_spadla.musicxml  pec_nam_spadla.notes.md
tests/fixtures/mutopia/: INDEX.json  download.py
tests/fixtures/real/: INDEX.json  download.py
tests/fixtures/real/aria/: aria.json  aria.musicxml
tests/fixtures/real/var01/: var01.json  var01.musicxml
tests/fixtures/real/var02/: var02.json  var02.musicxml
tests/fixtures/real/var03_canone/: var03_canone.json  var03_canone.musicxml
tests/fixtures/real/var04/: var04.json  var04.musicxml
tests/fixtures/real/var05/: var05.json  var05.musicxml
tests/fixtures/real/var07/: var07.json  var07.musicxml
tests/fixtures/real/var09_canone/: var09_canone.json  var09_canone.musicxml
tests/fixtures/vokal/: skakal_pes.musicxml  skakal_pes.notes.md
(+87 files in other folders)
